fixed some spacing errors at smaller sizes in the win condition

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -154,7 +154,7 @@ html {
     }
 
     .win {
-        margin: 0 1rem;
+        margin: 0 0;
         transform: scale(1.3);
     }
 
@@ -162,10 +162,19 @@ html {
 }
 
 @media screen and (max-width:768px) {
-
+    .gameLetters {
+        font-size: 1.5rem;
+        width: 1.5rem;
+        height: 2rem;
+        margin: .3rem;
+    }
     .timer {
         order: -1;
         height:150px;
+    }
+
+    .win {
+        margin: 0;
     }
 }
 
@@ -179,5 +188,8 @@ html {
 
     .timer {
         order: -1;
+    }
+    .win {
+        margin:0;
     }
 }
